# routes/notifications.go
@@ -8,16 +8,16 @@ import (
 	"github.com/jakopako/event-api/controllers"
 )
 
-func EventsRoute(route fiber.Router) {
+func NotificationsRoute(route fiber.Router) {
 	// for some reason auth cannot be defined outside this function
 	auth := basicauth.New(basicauth.Config{
 		Users: map[string]string{
 			os.Getenv("API_USER"): os.Getenv("API_PASSWORD"),
 		},
 	})
-	route.Get("/", controllers.GetAllEvents)
-	route.Post("/", auth, controllers.AddEvents)
-	route.Delete("/", auth, controllers.DeleteEvents)
-	route.Get("/:field", controllers.GetDistinct)
-	route.Post("/today/slack", controllers.GetTodaysEventsSlack)
+	route.Get("/add", controllers.AddNotification)
+	route.Get("/activate", controllers.ActivateNotification)
+	route.Delete("/delete", controllers.DeleteNotifiction)
+	route.Delete("/deleteInactive", auth, controllers.DeleteInactiveNotifictions)
+	route.Get("/send", auth, controllers.SendNotifications)
 }
